Solid point for table rows. Need to add clickable rows still.

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@
 .navbar-menu, .test-app-header{
   background-color: hsl(139, 23%, 73%);
 }
+
+.table.is-borderless td, .table.is-borderless th {
+  border: 0;
+ }
