Added footer back into index. Finished footer.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.test-app-header a, .test-app-header .navbar-burger, .footer .navbar-item, .footer ul{
+.test-app-header a, .test-app-header .navbar-burger {
   color: white;
 }
 
